centralized the header placement, now everyheader refence back to toolbar.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -33,25 +33,7 @@
     </style>
 </head>
 <body>
-    <header>
-        <nav class="toolbar">
-            <ul>
-                <li><a href="{{url_for('home')}}">Home</a></li>
-                <li><a href="{{url_for('manage_users')}}">manage_users</a></li>
-                <li><a href="{{url_for('login')}}">Login</a></li>
-                <li><a href="{{url_for('register')}}">Register</a></li>
-            </ul>
-            {% if current_user.is_authenticated %}
-            <div class="user-section">
-                <div class="user-icon">{{ current_user.username[0].upper() }}</div>
-                <span>{{ current_user.username }}</span>
-                <form action="{{ url_for('logout') }}" method="post">
-                    <button type="submit" class="logout-btn">Logout</button>
-                </form>
-            </div>
-        {% endif %}
-        </nav>
-    </header>
+    {% include 'toolbar.html' %}
     <div class="container">
         <h1>Welcome to our Website</h1>
         <p>This is the website about our recycle system.</p>
