--- a/templates/test_navbar.html
+++ b/templates/test_navbar.html
@@ -1,6 +1,6 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script defer src="jv/theme.js"></script>
+  <script defer src="js/theme.js"></script>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
@@ -11,6 +11,7 @@
 <body>
   <nav class="navbar">
     <ul class="navbar-nav">
+      <!-- Link to Home/Login Page -->
       <li class="logo">
         <a href="{{ url_for('home') }}" class="nav-link">
           <span class="link-text logo-text">The SPJ</span>
@@ -40,27 +41,23 @@
         </a>
       </li>
 
-      <li class="nav-item">
+      <!-- Link to Leaderboard Page -->
+      <li class="nav-item"> 
         <a href="#" class="nav-link">
           <svg
             aria-hidden="true"
             focusable="false"
             data-prefix="fad"
-            data-icon="cat"
+            data-icon="Leaderboard"
             role="img"
             xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 512 512"
-            class="svg-inline--fa fa-cat fa-w-16 fa-9x"
+            viewBox="0 0 576 512"
+            class="svg-inline--fa fa-trophy fa-w-16 fa-9x"
           >
             <g class="fa-group">
               <path
                 fill="currentColor"
-                d="M448 96h-64l-64-64v134.4a96 96 0 0 0 192 0V32zm-72 80a16 16 0 1 1 16-16 16 16 0 0 1-16 16zm80 0a16 16 0 1 1 16-16 16 16 0 0 1-16 16zm-165.41 16a204.07 204.07 0 0 0-34.59 2.89V272l-43.15-64.73a183.93 183.93 0 0 0-44.37 26.17L192 304l-60.94-30.47L128 272v-80a96.1 96.1 0 0 0-96-96 32 32 0 0 0 0 64 32 32 0 0 1 32 32v256a64.06 64.06 0 0 0 64 64h176a16 16 0 0 0 16-16v-16a32 32 0 0 0-32-32h-32l128-96v144a16 16 0 0 0 16 16h32a16 16 0 0 0 16-16V289.86a126.78 126.78 0 0 1-32 4.54c-61.81 0-113.52-44.05-125.41-102.4z"
-                class="fa-secondary"
-              ></path>
-              <path
-                fill="currentColor"
-                d="M376 144a16 16 0 1 0 16 16 16 16 0 0 0-16-16zm80 0a16 16 0 1 0 16 16 16 16 0 0 0-16-16zM131.06 273.53L192 304l-23.52-70.56a192.06 192.06 0 0 0-37.42 40.09zM256 272v-77.11a198.62 198.62 0 0 0-43.15 12.38z"
+                d="M400 0L176 0c-26.5 0-48.1 21.8-47.1 48.2c.2 5.3 .4 10.6 .7 15.8L24 64C10.7 64 0 74.7 0 88c0 92.6 33.5 157 78.5 200.7c44.3 43.1 98.3 64.8 138.1 75.8c23.4 6.5 39.4 26 39.4 45.6c0 20.9-17 37.9-37.9 37.9L192 448c-17.7 0-32 14.3-32 32s14.3 32 32 32l192 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-26.1 0C337 448 320 431 320 410.1c0-19.6 15.9-39.2 39.4-45.6c39.9-11 93.9-32.7 138.2-75.8C542.5 245 576 180.6 576 88c0-13.3-10.7-24-24-24L446.4 64c.3-5.2 .5-10.4 .7-15.8C448.1 21.8 426.5 0 400 0zM48.9 112l84.4 0c9.1 90.1 29.2 150.3 51.9 190.6c-24.9-11-50.8-26.5-73.2-48.3c-32-31.1-58-76-63-142.3zM464.1 254.3c-22.4 21.8-48.3 37.3-73.2 48.3c22.7-40.3 42.8-100.5 51.9-190.6l84.4 0c-5.1 66.3-31.1 111.2-63 142.3z"
                 class="fa-primary"
               ></path>
             </g>
@@ -68,7 +65,8 @@
           <span class="link-text">Cats</span>
         </a>
       </li>
-
+      
+      <!-- Link to Profile Page -->
       <li class="nav-item">
         <a href="#" class="nav-link">
           <svg
@@ -97,7 +95,7 @@
           <span class="link-text">Aliens</span>
         </a>
       </li>
-
+      <!-- Link to ??? Page -->
       <li class="nav-item">
         <a href="#" class="nav-link">
           <svg
@@ -126,7 +124,7 @@
           <span class="link-text">Space</span>
         </a>
       </li>
-
+      <!-- Link to ??? Page -->
       <li class="nav-item">
         <a href="#" class="nav-link">
           <svg
