--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,13 @@
     margin: 0;
     padding: 0;
   }
+
+  .body-home {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    background-color: #f0f0f0;
+  }
   
   body::-webkit-scrollbar {
     width: 0.25rem;
@@ -31,8 +38,28 @@
     margin-left: 5rem;
     padding: 1rem;
   }
-  
+  h1 {
+    text-align: center;
+    margin-top: 0;
+  }
+
+  p {
+    line-height: 1.5;
+  }
+
+  .container {
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    width: 90%;
+  }
+
   .navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: fixed;
     background-color: var(--bg-primary);
     transition: width 600ms ease;
@@ -53,9 +80,6 @@
     width: 100%;
   }
   
-  .nav-item:last-child {
-    margin-top: auto;
-  }
   
   .nav-link {
     display: flex;
