rename to navbar-login to navbar

--- a/templates/test_navbar.html
+++ b/templates/test_navbar.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  {% include 'navbar-login.html' %}
+  {% include 'navbar.html' %}
   <main>
       <h1>Hello, {{current_user.username}}!</h1>
         
