--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="body-home">
-  {% include 'navbar-login.html' %}
+  {% include 'navbars.html' %}
     
     <div class="container">
         <h1>Welcome to our Website</h1>
