--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -112,7 +112,6 @@
         </li>
 
         <!-- Link to if Logged in, then Profile, otherwise LoginPage Page -->
-        <!-- I want to for this button to be either profile.html or login.html -->
         {% if not current_user.is_authenticated %}
         <li class="nav-item">
           <a href="#" class="nav-link">
@@ -129,12 +128,12 @@
               <g class="fa-group">
                 <path
                   fill="currentColor"
-                  d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"
+                  d="M304 128a80 80 0 1 0 -160 0 80 80 0 1 0 160 0zM96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM49.3 464l349.5 0c-8.9-63.3-63.3-112-129-112l-91.4 0c-65.7 0-120.1 48.7-129 112zM0 482.3C0 383.8 79.8 304 178.3 304l91.4 0C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7L29.7 512C13.3 512 0 498.7 0 482.3z"
                   class="fa-primary"
                 ></path>
               </g>
             </svg>
-            <span class="link-text">Profile</span>
+            <span class="link-text">Login</span>
           </a>
         </li>
         {% endif %}
@@ -160,7 +159,7 @@
                 ></path>
               </g>
             </svg>
-            <span class="link-text">Profile</span>
+            <span class="link-text"> {{current_user.username}} </span>
           </a>
         </li>
         {% endif %}
