make containers visible

--- a/static/style.css
+++ b/static/style.css
@@ -48,7 +48,9 @@
   }
 
   .container {
-    background-color: white;
+    display:flex;
+    
+    background-color: greenyellow;
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
