moved divs into main

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,11 +9,12 @@
 
 <body class="body-home">
   {% include 'navbar.html' %}
-    
-    <div class="container">
-        <h1>Welcome to our Website</h1>
-        <p>This is the website about our recycle system.</p>
-        <p>Feel free to explore the website and learn more about our services and offerings.</p>
-    </div>
+    <main>
+        <div class="container">
+            <h1>Welcome to our Website</h1>
+            <p>This is the website about our recycle system.</p>
+            <p>Feel free to explore the website and learn more about our services and offerings.</p>
+        </div>
+    </main>
 </body>
 </html>
