--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar">
       <ul class="navbar-nav">
-        <!-- Link to Home/Login Page -->
+        <!-- Link to Home Page *only for Desktop* -->
         <li class="logo">
           <a href="{{ url_for('home') }}" class="nav-link">
             <span class="link-text logo-text">The SPJ</span>
@@ -51,7 +51,7 @@
                 ></path>
               </g>
             </svg>
-            <span class="link-text">About The SPJ</span>
+            <span class="link-text">About</span>
           </a>
         </li>
 
@@ -102,7 +102,7 @@
                 ></path>
               </g>
             </svg>
-            <span class="link-text">N/A</span>
+            <span class="link-text">QR Scanner</span>
           </a>
         </li>
         
