--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet" />
     <title>Home</title>
+    <script src="{{ url_for('serve_js') }}"></script>
 </head>
 
 <body class="body-home">
@@ -15,6 +16,7 @@
             <p>This is the website about our recycle system.</p>
             <p>Feel free to explore the website and learn more about our services and offerings.</p>
         </div>
+        <button onclick="logMessage()">Log Message</button>
     </main>
 </body>
 </html>
