made the qr code button work

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -83,7 +83,7 @@
         
         <!-- Link to QR -->
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a onclick="logMessage()" class="nav-link"> 
             <svg
               aria-hidden="true"
               focusable="false"
