rename link to about page

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -32,7 +32,7 @@
         </li>
         <!-- Link to About Page -->
         <li class="nav-item">
-          <a href="{{ url_for('test_navbar') }}" class="nav-link">
+          <a href="{{ url_for('about') }}" class="nav-link">
             <svg
               aria-hidden="true"
               focusable="false"
