resize root and change background color

--- a/static/style.css
+++ b/static/style.css
@@ -1,17 +1,17 @@
 :root {
-    font-size: 16px;
+    font-size: 1rem;
     font-family: 'Open Sans';
     --text-primary: #b6b6b6;
     --text-secondary: #ececec;
     --bg-primary: #23232e;
     --bg-secondary: #141418;
     --transition-speed: 600ms;
-    background-color: #b7b7b7;
+    background-color: #2f2f2f;
   }
   
   body {
     color: white;
-    background-color: white;
+    background-color: rgb(6, 6, 6);
     margin: 0;
     padding: 0;
   }
