--- a/templates/personal_page.html
+++ b/templates/personal_page.html
@@ -8,28 +8,32 @@
     <title>Personal Page</title>
 </head>
 <body>
-    
-    <h1>Recycling Chart</h1>
-    {% include 'toolbar.html' %}
-    <div class="plot-container">
-        {{ plot|safe }}
-    </div>
-    <table>
-        <tr>
-            <th>Recycling in Last Month</th>
-            <th>Longest Streak</th>
-            <th>Current Streak</th>
-        </tr>
-        <tr>
-            <td>{{ recycling_last_month|safe }}</td>
-            <td>{{ longest_streak|safe }}</td>
-            <td>{{ current_streak|safe }}</td>
-        </tr>
-        <tr>
-            <td>{{ recycling_last_month_dates|safe }}</td>
-            <td>{{ longest_streak_dates|safe }}</td>
-            <td>{{ current_streak_dates|safe }}</td>
-        </tr>
-    </table>
+    {% include 'navbar.html' %}
+    <main>
+        <div class="container">
+            <h1>Recycling Chart</h1>
+            {% include 'toolbar.html' %}
+            <div class="plot-container">
+                {{ plot|safe }}
+            </div>
+            <table>
+                <tr>
+                    <th>Recycling in Last Month</th>
+                    <th>Longest Streak</th>
+                    <th>Current Streak</th>
+                </tr>
+                <tr>
+                    <td>{{ recycling_last_month|safe }}</td>
+                    <td>{{ longest_streak|safe }}</td>
+                    <td>{{ current_streak|safe }}</td>
+                </tr>
+                <tr>
+                    <td>{{ recycling_last_month_dates|safe }}</td>
+                    <td>{{ longest_streak_dates|safe }}</td>
+                    <td>{{ current_streak_dates|safe }}</td>
+                </tr>
+            </table>
+        </div>
+    </main>
 </body>
 </html>
