Fixed the qrcode bug

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,5 @@
 <header>
+  <script src="{{ url_for('qrbutton_js') }}"></script>
   <nav class="navbar">
       <ul class="navbar-nav">
         <!-- Link to Home Page *only for Desktop* -->
