--- a/static/style.css
+++ b/static/style.css
@@ -11,7 +11,7 @@
   
   body {
     color: #f6fcdf;
-    background-color: #f6fcdf;
+    background-color: whitesmoke;
     margin: 0;
     padding: 0;
   }
