--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@
 <body>
   {% include 'navbar.html' %}
   <main>
-    <div class="container">
+    <div class="fulllength">
       <h1>Hello, {{current_user.username}}!</h1>
     </div>
     <div class="container">  
