--- a/templates/home.html
+++ b/templates/home.html
@@ -11,8 +11,10 @@
 <body class="body-home">
   {% include 'navbar.html' %}
     <main>
+        <div class="fulllength">
+            <h1>Welcome home, {{current_user.username}}!</h1>
+          </div>
         <div class="container">
-            <h1>Welcome to our Website</h1>
             <p>This is the website about our recycle system.</p>
             <p>Feel free to explore the website and learn more about our services and offerings.</p>
         </div>
