add header to div

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -16,6 +16,7 @@
         <h2>See how you stack up against other users!</h2>
     </div>
     <div class="container">
+        <h3>Your Rank</h3>
         <table class="table-borderless">
             <thead class="table-dark">
                 <tr>
@@ -34,7 +35,7 @@
         </table>
     </div>
     <div class="container">
-        <h2>Global Rankings</h2>
+        <h3>Global Rankings</h3>
         <table class="table-borderless">
             <thead class="table-dark">
                 <tr>
