--- a/templates/manage_bins.html
+++ b/templates/manage_bins.html
@@ -11,6 +11,9 @@
 <body class="body-home">
   {% include 'navbar.html' %}
     <main>
+        <div class="fulllength">
+            <h1>Manage Bins</h1>
+          </div>
         <div class="container">
             <h1>Welcome to our Website</h1>
             <p>This is the website about our recycle system.</p>
