add welcoming remarks

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,11 +12,11 @@
   {% include 'navbar.html' %}
     <main>
         <div class="fulllength">
-            <h1>Welcome home, {{current_user.username}}!</h1>
+            <h1>Welcome home, u idiot</h1>
           </div>
         <div class="container">
-            <p>This is the website about our recycle system.</p>
-            <p>Feel free to explore the website and learn more about our services and offerings.</p>
+            <p>If u see only one button below, it may be a good idea to login with your account. If u dont wanna, fuck you bitchass nigga.</p>
+            <p>Sincerely, Bob Loblaw</p>
         </div>
         
     </main>
