update register page

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,10 +12,12 @@
   {% include 'navbar.html' %}
     <main>
         <div class="fulllength">
-            <h1>Welcome home, u idiot</h1>
+            <h1>Welcome to the Void, u idiot</h1>
           </div>
         <div class="container">
-            <p>If u see only one button below, it may be a good idea to login with your account. If u dont wanna, fuck you bitchass nigga.</p>
+            <p>Dear whomever it may concern,</p>
+            <p>If u see only one button, it may be a good idea to login with your account.</p>
+            <p>If u dont wanna, fuck you bitchass nigga. If u do, luv u <3. </p>
             <p>Sincerely, Bob Loblaw</p>
         </div>
         
