add headers to all pages

--- a/templates/login.html
+++ b/templates/login.html
@@ -11,28 +11,31 @@
 <body>
     {% include 'navbar.html' %}
     <main>
-        <div class="container">
-        {% with messages = get_flashed_messages(with_categories=true) %}
-        
-        {% if messages %}
-        <div class="messages">
-        {% for category, message in messages %}
-        <div class="{{ category }}">{{ message }}</div>
-        {% endfor %}
+        <div class="fulllength">
+            <h1>Logging into The SingProJet</h1>
+            <h2>Back to recycle more?</h2>
         </div>
-        {% endif %}
-        
-        {% endwith %}
-        <form method="POST" action="{{ url_for('login') }}">
-        {{ form.hidden_tag() }}
-        <div> {{ form.username.label }} {{ form.username }} </div>
-        <div>
-            {{ form.user_password.label }}
-            {{ form.user_password }}
+        <div class="container"> 
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            
+
+            {% if messages %}
+                <div class="messages">
+                {% for category, message in messages %}
+                    <div class="{{ category }}">{{ message }}</div>
+                {% endfor %}
+                </div>
+            {% endif %}
+            
+            {% endwith %}
+            <form method="POST" action="{{ url_for('login') }}">
+                {{ form.hidden_tag() }}
+                <div> {{ form.username.label }} {{ form.username }} </div>
+                <div> {{ form.user_password.label }} {{ form.user_password }} </div>
+                {{ form.submit }}
+            </form>
+            <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a></p>
         </div>
-        {{ form.submit }}
-        </form>
-        <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a></p>
     </main>
 </body>
 </html>
