--- a/templates/register.html
+++ b/templates/register.html
@@ -62,7 +62,7 @@
     <main>
         <div class="fulllength">
             <h1>Register NOW!</h1>
-            <h2>You won't regret this!</h2>
+            <h2>Welcome to the The SingProJet!</h2>
         </div>
         <div class="container">    
             <form method="POST" action="">
