--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,6 @@
     --bg-primary: #1a1a19;
     --bg-secondary: #2a2a2f;
     --transition-speed: 600ms;
-    background-color: #2f2f2f;
   }
   
   body {
@@ -119,7 +118,9 @@
     filter: grayscale(0%) opacity(1);
     color: var(--text-secondary);
   }
-  
+  a {
+    color: #859f3d
+  }
   .link-text {
     display: none;
     margin-left: 1rem;
@@ -199,7 +200,7 @@
     }
     main {
       padding-left: 0;
-      padding-bottom: 10rem;
+      padding-bottom: 5rem;
 
     }
     
