--- a/templates/personal_page.html
+++ b/templates/personal_page.html
@@ -10,30 +10,39 @@
 <body>
     {% include 'navbar.html' %}
     <main>
+        <div class="fulllength">
+            <h1>{{ current_user.username }}'s Personal Page</h1>
+        </div>
         <div class="container">
             <h1>Recycling Chart</h1>
             {% include 'toolbar.html' %}
             <div class="plot-container">
                 {{ plot|safe }}
             </div>
-            <table>
-                <tr>
-                    <th>Recycling in Last Month</th>
-                    <th>Longest Streak</th>
-                    <th>Current Streak</th>
-                </tr>
-                <tr>
-                    <td>{{ recycling_last_month|safe }}</td>
-                    <td>{{ longest_streak|safe }}</td>
-                    <td>{{ current_streak|safe }}</td>
-                </tr>
-                <tr>
-                    <td>{{ recycling_last_month_dates|safe }}</td>
-                    <td>{{ longest_streak_dates|safe }}</td>
-                    <td>{{ current_streak_dates|safe }}</td>
-                </tr>
-            </table>
+            <div class="container">
+                <h2>Recycling Statistics</h2>
+                <table>
+                    <tr>
+                        <th>Recycling in Last Month</th>
+                        <th>Longest Streak</th>
+                        <th>Current Streak</th>
+                    </tr>
+                    <tr>
+                        <td>{{ recycling_last_month|safe }}</td>
+                        <td>{{ longest_streak|safe }}</td>
+                        <td>{{ current_streak|safe }}</td>
+                    </tr>
+                    <tr>
+                        <td>{{ recycling_last_month_dates|safe }}</td>
+                        <td>{{ longest_streak_dates|safe }}</td>
+                        <td>{{ current_streak_dates|safe }}</td>
+                    </tr>
+                </table>
+            </div>
         </div>
+        <form action="{{ url_for('logout') }}" method="post">
+            <button type="submit" class="logout-btn">Logout</button>
+        </form>
         <div class="container">
             <form action="{{ url_for('logout') }}" method="post">
                 <button type="submit" class="logout-btn">Logout</button>
