--- a/templates/home.html
+++ b/templates/home.html
@@ -5,22 +5,20 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet" />
     <title>Home</title>
-    
 </head>
 
 <body class="body-home">
   {% include 'navbar.html' %}
     <main>
         <div class="fulllength">
-            <h1>Welcome to the Void, u idiot</h1>
+            <h1>Welcome to The SingProJet</h1>
           </div>
         <div class="container">
             <p>Dear whomever it may concern,</p>
             <p>If u see only one button, it may be a good idea to login with your account.</p>
-            <p>If u dont wanna, fuck you bitchass nigga. If u do, luv u <3. </p>
-            <p>Sincerely, Bob Loblaw</p>
-        </div>
-        
+            <p>Sincerely,</p>
+            <p>Bob Loblaw</p>
+        </div>     
     </main>
 </body>
 </html>
