--- a/templates/manage_bins.html
+++ b/templates/manage_bins.html
@@ -11,7 +11,7 @@
     {% include 'navbar.html' %}
     <main>
         <div class="fulllength">
-            <h1>Manage Bins</h1>
+            <h1>Bin Management</h1>
         </div>
         <div class="container">
             <table class="bin-table">
